--- a/src/main/webapp/login/index.html
+++ b/src/main/webapp/login/index.html
@@ -1,80 +1,56 @@
-<!--
-Author: W3layouts
+<!--A Design by W3layouts 
+Author: W3layout
 Author URL: http://w3layouts.com
 License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
 -->
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
 <head>
-<title>Out Strip Sign In Form A Responsive Widget Template :: w3layouts</title>
-<!-- Meta tag Keywords -->
+<title>Proficient Login Form Flat Responsive widget Template :: w3layouts</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Out Strip Sign In Form Responsive Widget,Login form widgets, Sign up Web forms , Login signup Responsive web form,Flat Pricing table,Flat Drop downs,Registration Forms,News letter Forms,Elements" />
-<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
-function hideURLbar(){ window.scrollTo(0,1); } </script>
-<!-- Meta tag Keywords -->
-<!-- css files -->
-<link rel="stylesheet" href="css/font-awesome.css"> <!-- Font-Awesome-Icons-CSS -->
-<link rel="stylesheet" href="css/style.css" type="text/css" media="all" /> <!-- Style-CSS --> 
-<!-- //css files -->
-<!-- web-fonts -->
-<link href="//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
-<link href="//fonts.googleapis.com/css?family=Satisfy" rel="stylesheet">
-<!-- //web-fonts -->
+<meta name="keywords" content="Proficient Login Form Responsive, Login form web template,Flat Pricing tables,Flat Drop downs  Sign up Web Templates, Flat Web Templates, Login signup Responsive web template, Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
+<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+<!-- fonts -->
+<link href="//fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
+<link href="//fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+<!-- /fonts -->
+<!-- css -->
+<link href="css/font-awesome.min.css" rel="stylesheet" type="text/css" media="all" />
+<link href="css/style.css" rel="stylesheet" type='text/css' media="all" />
+<!-- /css -->
 </head>
 <body>
-<div data-vide-bg="video/video2">
-	<div class="center-container">
-		<!--header-->
-		<div class="header-w3l">
-			<h1>Out Strip Sign In Form</h1>
-		</div>
-		<!--//header-->
-		<!--main-->
-		<div class="main-content-agile">
-			<div class="wthree-pro">
-				<h2>Sign In</h2>
+<div class="overlay">
+	<h1 class="w3layouts agileits">Squirrel Studio </h1>
+	<div class="content-w3ls agileits">
+		<img src="images/girl.png" alt="" class="user-wthree">
+		<form action="login" method="post">
+			<div class="form-group1-agile agile-info">
+				<input type="text" name="username" value="Username" placeholder="Username">
 			</div>
-			<div class="sub-main-w3">	
-				<form action="#" method="post">
-					
-					<div class="icon1">
-						<i>Email</i>
-						<input placeholder=" " name="Email" type="email" required="">
-					</div>
-					
-					<div class="icon2">
-						<i>Password</i>
-						<input  placeholder=" " name="Password" type="password" required="">
-					</div>
-					<div class="rem-w3">
-						<span class="check-w3"><input type="checkbox" />Remember Me</span>
-						<a href="#" >Forgot Password?</a>
-						<div class="clear"></div>
-					</div>
-					<input type="submit" value="Sign in">
-					<h6>or sign in with</h6>
-					<div class="navbar-right social-icons"> 
-						<a href="#" class="one-w3ls" ><i class="fa fa-facebook" aria-hidden="true"></i> Facebook</a>
-						<a href="#" class="two-w3ls" ><i class="fa fa-google-plus" aria-hidden="true"></i>Google+</a>
-						<div class="clear"></div>
-					</div>
-				</form>
+			<div class="form-group2-agile agile-info">
+				<input type="password" name="password" value="Password" placeholder="Password">	
 			</div>
-		</div>
-		<!--//main-->
-		<!--footer-->
-		<div class="footer">
-			<p>&copy; 2017 Out Strip Sign In Form. All rights reserved | Design by <a href="http://w3layouts.com">W3layouts</a></p>
-		</div>
-		<!--//footer-->
+			<div class="form-group3-agile wthree">
+				<input type="checkbox" id="brand" value="">
+				<label for="brand"><span></span> Keep Me Logged In?</label>
+			</div>
+			<input type="submit" value="LOG IN">
+		</form>
+		<a href="#" class="face-link"><i class="fa fa-facebook" aria-hidden="true"></i> Facebook</a>
+		<a href="#" class="twitter-link"><i class="fa fa-twitter" aria-hidden="true"></i> Twitter</a>
 	</div>
+	<div class="footer-w3ls w3-agile">
+		<p class="w3-agileits">© 2017 Proficient Login Form. All Rights Reserved | Design by <a href="https://w3layouts.com/" target="_blank">w3layouts</a></p>
+	</div>	
 </div>
+<video autoplay loop id="video-background" poster="video/city.jpg" muted>
+  <source src="video/city.mp4" type="video/mp4">
+</video>	
 <!-- js -->
-<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
-<script src="js/jquery.vide.min.js"></script>
-<!-- //js -->
+<script src="js/modernizr.min.js"></script>
+<!-- /js -->
 </body>
 </html>
