modify login page files

--- a/src/main/webapp/login/index.html
+++ b/src/main/webapp/login/index.html
@@ -26,7 +26,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<h1 class="w3layouts agileits">Squirrel Studio </h1>
 	<div class="content-w3ls agileits">
 		<img src="images/girl.png" alt="" class="user-wthree">
-		<form action="login" method="post">
+		<form action="/login" method="post">
 			<div class="form-group1-agile agile-info">
 				<input type="text" name="username" value="Username" placeholder="Username">
 			</div>
