--- a/src/main/webapp/login/index.html
+++ b/src/main/webapp/login/index.html
@@ -17,8 +17,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <link href="//fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 <!-- /fonts -->
 <!-- css -->
-<link href="css/font-awesome.min.css" rel="stylesheet" type="text/css" media="all" />
-<link href="css/style.css" rel="stylesheet" type='text/css' media="all" />
+<link href="../css/font-awesome.min.css" rel="stylesheet" type="text/css" media="all" />
+<link href="../css/style.css" rel="stylesheet" type='text/css' media="all" />
 <!-- /css -->
 </head>
 <body>
@@ -50,7 +50,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
   <source src="video/city.mp4" type="video/mp4">
 </video>	
 <!-- js -->
-<script src="js/modernizr.min.js"></script>
+<script src="../js/modernizr.min.js"></script>
 <!-- /js -->
 </body>
 </html>
