modify login page files-2

--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -53,4 +53,4 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <script src="../js/modernizr.min.js"></script>
 <!-- /js -->
 </body>
-<
+</html>
