modidy login page files

--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -1,56 +1,79 @@
-<!--A Design by W3layouts
-Author: W3layout
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
-<!doctype html>
-<html>
+
+<!DOCTYPE html>
+<html lang="en" class="no-js">
+
 <head>
-<title>Proficient Login Form Flat Responsive widget Template :: w3layouts</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Proficient Login Form Responsive, Login form web template,Flat Pricing tables,Flat Drop downs  Sign up Web Templates, Flat Web Templates, Login signup Responsive web template, Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
-<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-<!-- fonts -->
-<link href="//fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
-<link href="//fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-<!-- /fonts -->
-<!-- css -->
-<link href="../css/font-awesome.min.css" rel="stylesheet" type="text/css" media="all" />
-<link href="../css/style.css" rel="stylesheet" type='text/css' media="all" />
-<!-- /css -->
+
+<meta charset="utf-8">
+<title>登录页面</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="">
+<meta name="author" content="">
+
+<!-- CSS -->
+
+<link rel="stylesheet" href="css/supersized.css">
+<link rel="stylesheet" href="css/login.css">
+<link href="css/bootstrap.min.css" rel="stylesheet">
+<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+<!--[if lt IE 9]>
+	<script src="js/html5.js"></script>
+<![endif]-->
+<script src="js/jquery-1.8.2.min.js"></script>
+<script type="text/javascript" src="js/jquery.form.js"></script>
+<script type="text/javascript" src="js/tooltips.js"></script>
+<script type="text/javascript" src="js/login.js"></script>
 </head>
+
 <body>
-<div class="overlay">
-	<h1 class="w3layouts agileits">Squirrel Studio </h1>
-	<div class="content-w3ls agileits">
-		<img src="images/girl.png" alt="" class="user-wthree">
-		<form action="/login" method="post">
-			<div class="form-group1-agile agile-info">
-				<input type="text" name="username" value="Username" placeholder="Username">
+
+<div class="page-container">
+	<div class="main_box">
+		<div class="login_box">
+			<div class="login_logo">
+				<img src="images/logo.png" >
 			</div>
-			<div class="form-group2-agile agile-info">
-				<input type="password" name="password" value="Password" placeholder="Password">
+		
+			<div class="login_form">
+				<form action="index.html" id="login_form" method="post">
+					<div class="form-group">
+						<label for="j_username" class="t">邮　箱：</label> 
+						<input id="email" value="" name="email" type="text" class="form-control x319 in" 
+						autocomplete="off">
+					</div>
+					<div class="form-group">
+						<label for="j_password" class="t">密　码：</label> 
+						<input id="password" value="" name="password" type="password" 
+						class="password form-control x319 in">
+					</div>
+					<div class="form-group">
+						<label for="j_captcha" class="t">验证码：</label>
+						 <input id="j_captcha" name="j_captcha" type="text" class="form-control x164 in">
+						<img id="captcha_img" alt="点击更换" title="点击更换" src="images/captcha.jpeg" class="m">
+					</div>
+					<div class="form-group">
+						<label class="t"></label>
+						<label for="j_remember" class="m">
+						<input id="j_remember" type="checkbox" value="true">&nbsp;记住登陆账号!</label>
+					</div>
+					<div class="form-group space">
+						<label class="t"></label>　　　
+						<button type="button"  id="submit_btn" 
+						class="btn btn-primary btn-lg">&nbsp;登&nbsp;录&nbsp </button>
+						<input type="reset" value="&nbsp;重&nbsp;置&nbsp;" class="btn btn-default btn-lg">
+					</div>
+				</form>
 			</div>
-			<div class="form-group3-agile wthree">
-				<input type="checkbox" id="brand" value="">
-				<label for="brand"><span></span> Keep Me Logged In?</label>
-			</div>
-			<input type="submit" value="LOG IN">
-		</form>
-		<a href="#" class="face-link"><i class="fa fa-facebook" aria-hidden="true"></i> Facebook</a>
-		<a href="#" class="twitter-link"><i class="fa fa-twitter" aria-hidden="true"></i> Twitter</a>
-	</div>
-	<div class="footer-w3ls w3-agile">
-		<p class="w3-agileits">© 2017 Proficient Login Form. All Rights Reserved | Design by <a href="https://w3layouts.com/" target="_blank">w3layouts</a></p>
+		</div>
+		<div class="bottom">Copyright &copy; 2017 - 2018 <a href="#">系统登陆</a></div>
 	</div>
 </div>
-<video autoplay loop id="video-background" poster="video/city.jpg" muted>
-  <source src="video/city.mp4" type="video/mp4">
-</video>
-<!-- js -->
-<script src="../js/modernizr.min.js"></script>
-<!-- /js -->
+
+<!-- Javascript -->
+
+<script src="js/supersized.3.2.7.min.js"></script>
+<script src="js/supersized-init.js"></script>
+<script src="js/scripts.js"></script>
+
 </body>
 </html>
