modified login.html file

--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -65,7 +65,7 @@
 				</form>
 			</div>
 		</div>
-		<div class="bottom">Copyright &copy; 2017 - 2018 <a href="#">系统登陆</a></div>
+		<div class="bottom">Copyright &copy; 2017 - 2018 <a href="#">首页</a></div>
 	</div>
 </div>
 
