--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -37,12 +37,12 @@
 			<div class="login_form">
 				<form action="index.html" id="login_form" method="post">
 					<div class="form-group">
-						<label for="j_username" class="t">邮　箱：</label> 
+						<label for="username" class="t">邮　箱：</label>
 						<input id="email" value="" name="email" type="text" class="form-control x319 in" 
 						autocomplete="off">
 					</div>
 					<div class="form-group">
-						<label for="j_password" class="t">密　码：</label> 
+						<label for="password" class="t">密　码：</label>
 						<input id="password" value="" name="password" type="password" 
 						class="password form-control x319 in">
 					</div>
